fix: images too big on mobile

--- a/src/pages/posts/post.module.scss
+++ b/src/pages/posts/post.module.scss
@@ -19,6 +19,12 @@
     color: var(--gray-300);
     margin-top: 1.5rem;
   }
+
+  @media (max-width: 720px) {
+    h1 {
+      font-size: 2.5rem;
+    }
+  }
 }
 
 .postContent {
@@ -39,29 +45,13 @@
     }
   }
 
-  &.previewContent {
-    background: linear-gradient(var(--gray-100), transparent);
-    background-clip: text;
-    -webkit-text-fill-color: transparent;
+  img {
+    max-width: 720px;
   }
-}
 
-.continueReading {
-  padding: 2rem;
-  text-align: center;
-  background: var(--gray-850);
-  border-radius: 100px;
-  font-size: 1.25rem;
-  font-weight: bold;
-  margin: 4rem 0 2rem;
-
-  a {
-    color: var(--yellow-500);
-    margin-left: 0.5rem;
-    
-    &:hover {
-      text-decoration: underline;
+  @media (max-width: 720px) {
+    img {
+      max-width: 300px;
     }
   }
-
 }
