--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -50,3 +50,7 @@ p {
 button {
   cursor: pointer;
 }
+
+a {
+  color: var(--red);
+}
